[project]
name = "fastapi-asdasd"
version = "0.1.0"
description = ""
authors = [
    {name = "K0ban4ik7089",email = "borissviridov24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
